docs/tests/typing/bad/testfile-redef-3.cpp

int f;
void f() {}
int main() {}
